tests/compiletests/ui/lang/asm/issue-1002.stderr
error: using `OpReturn` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:9:15
   |
LL |         asm!("OpReturn", options(noreturn));
   |               ^^^^^^^^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturnValue` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:16:14
   |
LL |             "OpReturnValue {x}",
   |              ^^^^^^^^^^^^^^^^^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturn` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:26:14
   |
LL |             "OpReturn",          // close active block
   |              ^^^^^^^^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturnValue` to return from within `asm!` is disallowed
  --> $DIR/issue-1002.rs:35:14
   |
LL |             "OpReturnValue {x}", // close active block
   |              ^^^^^^^^^^^^^^^^^
   |
   = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: aborting due to 4 previous errors

